// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlData buildControlData - disabled properties for noStableId 1`] = `
Object {
  "id": "",
  "name": "sap.m.Button",
  "properties": Array [
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": true,
      "name": "activeIcon",
      "propertyType": "controlProperty",
      "readableName": "Active Icon",
      "type": "string",
      "ui5Type": "sap.ui.core.URI",
      "value": undefined,
    },
    Object {
      "editor": "dropdown",
      "isEnabled": false,
      "name": "ariaHasPopup",
      "options": Array [
        Object {
          "key": "None",
          "text": "None",
        },
        Object {
          "key": "Menu",
          "text": "Menu",
        },
        Object {
          "key": "ListBox",
          "text": "ListBox",
        },
      ],
      "propertyType": "controlProperty",
      "readableName": "Aria Has Popup",
      "type": "string",
      "ui5Type": "sap.ui.core.aria.HasPopup",
      "value": undefined,
    },
    Object {
      "editor": "checkbox",
      "isEnabled": false,
      "name": "blocked",
      "propertyType": "controlProperty",
      "readableName": "Blocked",
      "type": "boolean",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "busyIndicatorDelay",
      "propertyType": "controlProperty",
      "readableName": "Busy Indicator Delay",
      "type": "integer",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "fieldGroupIds",
      "propertyType": "controlProperty",
      "readableName": "Field Group Ids",
      "type": "string",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "test",
      "propertyType": "controlProperty",
      "readableName": "Test",
      "type": "float",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "text",
      "propertyType": "controlProperty",
      "readableName": "Text",
      "type": "string",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "width",
      "propertyType": "controlProperty",
      "readableName": "Width",
      "type": "string",
      "ui5Type": "sap.ui.core.CSSSize",
      "value": undefined,
    },
  ],
  "type": "sap.m.Button",
}
`;

exports[`controlData buildControlData - manifest properties 1`] = `
Object {
  "id": "testTableId",
  "name": "sap.m.Button",
  "properties": Array [
    Object {
      "documentation": Object {
        "defaultValue": "false",
        "description": "Enable Export Excel",
        "propertyName": "enableExportExcel",
        "type": "boolean",
      },
      "editor": "checkbox",
      "isEnabled": true,
      "name": "enableExportExcel",
      "propertyType": "configuration",
      "readableName": "Enable Export Excel",
      "type": "boolean",
      "ui5Type": undefined,
      "value": false,
    },
    Object {
      "documentation": Object {
        "defaultValue": "0",
        "description": "Frozen Column Count",
        "propertyName": "frozenColumnCount",
        "type": "int",
      },
      "editor": "input",
      "isEnabled": true,
      "name": "frozenColumnCount",
      "propertyType": "configuration",
      "readableName": "Frozen Column Count",
      "type": "integer",
      "ui5Type": undefined,
      "value": 12,
    },
    Object {
      "documentation": Object {
        "defaultValue": "Test Table",
        "description": "table header",
        "propertyName": "header",
        "type": "string",
      },
      "editor": "input",
      "isEnabled": true,
      "isIcon": false,
      "name": "header",
      "propertyType": "configuration",
      "readableName": "Header",
      "type": "string",
      "ui5Type": undefined,
      "value": "USA table",
    },
    Object {
      "documentation": Object {
        "defaultValue": "gridTable",
        "description": "table type",
        "propertyName": "type",
        "type": "string",
      },
      "editor": "dropdown",
      "isEnabled": true,
      "name": "type",
      "options": Array [
        Object {
          "key": "analyticalTable",
          "text": "Analytical Table",
        },
        Object {
          "key": "treeTable",
          "text": "Tree Table",
        },
        Object {
          "key": "gridTable",
          "text": "Grid Table",
        },
        Object {
          "key": "responsiveTable",
          "text": "Responsive Table",
        },
      ],
      "propertyType": "configuration",
      "readableName": "Type",
      "type": "string",
      "ui5Type": undefined,
      "value": "responsiveTable",
    },
  ],
  "type": "sap.m.Button",
}
`;

exports[`controlData buildControlData 1`] = `
Object {
  "id": "testID",
  "name": "sap.m.Button",
  "properties": Array [
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": true,
      "name": "activeIcon",
      "propertyType": "controlProperty",
      "readableName": "Active Icon",
      "type": "string",
      "ui5Type": "sap.ui.core.URI",
      "value": "",
    },
    Object {
      "editor": "dropdown",
      "isEnabled": false,
      "name": "ariaHasPopup",
      "options": Array [
        Object {
          "key": "None",
          "text": "None",
        },
        Object {
          "key": "Menu",
          "text": "Menu",
        },
        Object {
          "key": "ListBox",
          "text": "ListBox",
        },
      ],
      "propertyType": "controlProperty",
      "readableName": "Aria Has Popup",
      "type": "string",
      "ui5Type": "sap.ui.core.aria.HasPopup",
      "value": "None",
    },
    Object {
      "editor": "checkbox",
      "isEnabled": false,
      "name": "blocked",
      "propertyType": "controlProperty",
      "readableName": "Blocked",
      "type": "boolean",
      "ui5Type": undefined,
      "value": "testModel>testValue/value",
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "busyIndicatorDelay",
      "propertyType": "controlProperty",
      "readableName": "Busy Indicator Delay",
      "type": "integer",
      "ui5Type": undefined,
      "value": 1000,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "fieldGroupIds",
      "propertyType": "controlProperty",
      "readableName": "Field Group Ids",
      "type": "string",
      "ui5Type": undefined,
      "value": Array [],
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "test",
      "propertyType": "controlProperty",
      "readableName": "Test",
      "type": "float",
      "ui5Type": undefined,
      "value": "1.73",
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "text",
      "propertyType": "controlProperty",
      "readableName": "Text",
      "type": "string",
      "ui5Type": undefined,
      "value": "",
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "width",
      "propertyType": "controlProperty",
      "readableName": "Width",
      "type": "string",
      "ui5Type": "sap.ui.core.CSSSize",
      "value": "",
    },
  ],
  "type": "sap.m.Button",
}
`;
